<resources>
    <string name="app_name">MovieCheck</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_pendings">Plan to Watch</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_user">User or email</string>
    <string name="password">Password</string>
    <string name="register">Sing up</string>
    <string name="login_login">Log in</string>
    <string name="register_title">Enter your data</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="detail_title">Detail</string>
    <string name="detail_info">Info</string>
    <string name="detail_social">Social</string>
    <string name="detail_add_favorites">Add to Favorites</string>
    <string name="detail_add_pendant">Plan to Watch</string>
    <string name="detail_add_rating">Add rating</string>
    <string name="detail_comment">Write your comment here</string>
    <string name="profile_delete_account">Delete account</string>
    <string name="profile_warning">Warning!</string>
    <string name="profile_delete_permanently">Delete permanently</string>
    <string name="password_input">Write your password here</string>
    <string name="email_input">Write your email here</string>
    <string name="user_input">Write your username here</string>
    <string name="password_repeat_input">Repeat your password here</string>
    <string name="title_profile">Profile</string>
    <string name="profile_read">Read carefully before continuing</string>
    <string name="profile_warning_text">You are about to delete your user account. If you decide to continue you will not be able to recover your data, including your favorite and pending movies.</string>
    <string name="profile_cancel">Cancel</string>
    <string name="description_app_icon">Application Icon</string>
    <string name="description_default_profile_picture">Default profile picture</string>
    <string name="description_warning_icon">Warning icon for account delete</string>
...
    <string name="comment_large" translatable="false">Sed sit amet rutrum leo. Sed imperdiet sapien non congue ultrices. Nulla semper neque et tristique volutpat. Aliquam iaculis enim porttitor rutrum ullamcorper.</string>
    <string name="comment_delete">Delete comment</string>
    <string name="add_rating_star">Add your rating</string>
    <string name="add_rating_scale">Add your rating on a scale from 1 to 10</string>
    <string name="add_rating_large">This rating will be of great help when other users discover new movies.</string>
    <string name="submit_rating">Submit rating</string>
    <string name="log_out">Log out</string>
    <string name="app_info" translatable="false">MovieCheck Info</string>
    <string name="app_info_about">About MovieCheck</string>
    <string name="app_info_what_is">What is MovieCheck?</string>
    <string name="app_info_what_is_response">MovieCheck is simply an app designed to manage the audiovisual preferences of the user.</string>
    <string name="app_info_what_can_do">What can you do with it?</string>
    <string name="app_info_what_can_do_response">With MovieCheck you will be able to check information on the most popular movies of the moment. In addition, you can mark those that you like the most as favorites and even list them as pending so you don\'t miss out on the most interesting titles. Not only that, but the members of the MovieCheck community will also be able to interact with each oth
...
    <string name="remove_favorite">Remove Favorite</string>
    <string name="remove_pending">Remove Pending</string>
    <string name="empty_comment">Comment body is empty. Write something!</string>
    <string name="delete_comment">Comment deleted!</string>
    <string name="rating_already_added">You have already rated this movie. Thanks for your participation!</string>
    <string name="rating_not_added">No rating has been added. Take your time!</string>
    <string name="login_bar_title">Login</string>
    <string name="register_bar_title">Sign Up</string>
    <string name="delete_account_bar_title">Delete Account</string>
    <string name="fetchData">Films updated!</string>
</resources>
