...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/description_app_icon" />

            <TextView
                android:id="@+id/tvAppNameRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAppIconRegister" />

            <TextView
                android:id="@+id/tvEnterDataTextRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_title"
                android:textSize="26sp"
                android:textStyle="bold|italic"
...
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterDataTextRegister" />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email_input"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/etUsernameRegister"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEmailRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailRegister"
                tools:ignore="TextContrastCheck" />

            <TextView
...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvUsernameRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvUsernameRegister"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/bRegister"
                android:layout_width="165dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/red_widgets"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRepeatPasswordRegister"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvPasswordRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/etEmailRegister"
                app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="4dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password_input"
...
