...
                android:text="@string/password"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tvPasswordProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvPasswordProfile" />

            <Button
                android:id="@+id/bDeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/red_widgets"
                android:text="@string/profile_delete_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bLogOut"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/bLogOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
